# bioformer

./: .gitignore  BIOREACTOR_TRANSFORMER_POC.md  README.md  pyproject.toml
configs/: baseline.yaml  transformer_small.yaml
notebooks/: 00_colab_setup.ipynb  01_eda.ipynb  02_baselines.ipynb  03_transformer.ipynb
scripts/: setup_colab.sh
src/bioformer/: __init__.py
src/bioformer/datasets/: __init__.py  efp.py
src/bioformer/eval/: __init__.py  metrics.py  plots.py
src/bioformer/models/: __init__.py  baselines.py  transformer.py
src/bioformer/train/: __init__.py  train_baseline.py  train_transformer.py
tests/: test_efp.py  test_metrics.py  test_train_transformer.py  test_transformer.py
